--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         }
 
         CsvToHtmlTable.init({
-            csv_path: "data/Health Clinics in Chicago.csv",
+            csv_path: "data/toegankelijkheidsdata.csv",
             element: "table-container",
             allow_download: true,
             csv_options: {
@@ -59,7 +59,7 @@
                 delimiter: '"'
             },
             datatables_options: {
-                paging: false
+                paging: true
             },
             custom_formatting: [
                 [4, format_link]
