--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <footer class="row">
             <div class="col">
                 <hr>
-                <p class="text-right"><a href="https://github.com/derekeder/csv-to-html-table">CSV to HTML Table</a> by
+                <p class="text-right">gebaseerd op <a href="https://github.com/derekeder/csv-to-html-table">CSV to HTML Table</a> by
                     <a href="http://derekeder.com">Derek
                         Eder</a></p>
             </div>
