--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             },
             datatables_options: {
                 paging: true
+                fixedHeader: true
             },
             custom_formatting: [
                 [4, format_link]
