--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 delimiter: '"'
             },
             datatables_options: {
-                paging: true
+                paging: true,
                 fixedHeader: true
             },
             custom_formatting: [
