--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>CSV to HTML Table</title>
+    <title>Toegankelijkheidsdata Amsterdam</title>
     <meta name="author" content="Derek Eder">
     <meta content="Tabel met informatie over toegankelijkheid in Amsterdam">
 
