--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
     <script src="https://cdn.datatables.net/fixedheader/3.2.4/js/dataTables.fixedHeader.min.js"></script>
-    <script src="https://cdn.datatables.net/plug-ins/1.12.1/i18n/nl-NL.json></script>
+    <script src="https://cdn.datatables.net/plug-ins/1.12.1/i18n/nl-NL.json"></script>
     <script src="js/csv_to_html_table.js"></script>
 
     <script>
