--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 delimiter: '"'
             },
             datatables_options: {
+                language: true,
                 paging: true,
                 fixedHeader: true
             },
