--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             datatables_options: {
                 language: true,
                 paging: true,
-                fixedHeader: true
+                fixedHeader: false
             },
             custom_formatting: [
                 [4, format_link]
