--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/fixedheader/3.2.4/css/fixedHeader.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/keytable/2.7.0/css/keyTable.dataTables.min.css">
 </head>
 
 <body>
@@ -43,6 +44,7 @@
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
     <script src="https://cdn.datatables.net/fixedheader/3.2.4/js/dataTables.fixedHeader.min.js"></script>
+    <script src="https://cdn.datatables.net/keytable/2.7.0/js/dataTables.keyTable.min.js"></script>
     <script src="https://cdn.datatables.net/plug-ins/1.12.1/i18n/nl-NL.json"></script>
     <script src="js/csv_to_html_table.js"></script>
 
@@ -64,7 +66,8 @@
             datatables_options: {
                 language: true,
                 paging: true,
-                fixedHeader: false
+                fixedHeader: false,
+                keyTable: true
             },
             custom_formatting: [
                 [4, format_link]
